--- a/src/darkslide/themes/default/css/screen.css
+++ b/src/darkslide/themes/default/css/screen.css
@@ -4,9 +4,56 @@ html, body {
     width: 100%;
     height: 100%;
 }
-div.presentation,
-body.presenter_view div#current_presenter_notes section,
-div.slides, body.expose div.slides.nocontext, .presenter_notes {
+.slides .slide {
+    opacity: 0;
+}
+.expose .slides .slide,
+.slides .slide.current {
+    opacity: 1;
+}
+.slide {
+    display: none;
+    left: 50%;
+    top: 50%;
+    margin-top: -375px;
+    margin-left: -500px;
+    -webkit-transition: margin 0.3s ease-in, opacity 0.3s ease-in;
+    -moz-transition: margin 0.3s ease-in, opacity 0.3s ease-in;
+    -o-transition: margin 0.3s ease-in, opacity 0.3s ease-in;
+}
+.slide.current,
+.slide.prev,
+.slide.next,
+.slide.after_next {
+    display: block;
+}
+.slide.prev {
+    margin-left: -1510px;
+}
+.slide.next {
+    margin-left: 510px;
+}
+.slide.after_next {
+    margin-left: 1520px;
+}
+
+.show_next .slide.prev {
+    margin-left: -2015px;
+}
+.show_next .slide.current {
+    margin-left: -1005px;
+}
+.show_next .slide.next {
+    margin-left: 5px;
+}
+.show_next .slide.after_next {
+    margin-left: 1015px;
+}
+.presentation,
+.presenter_view #current_presenter_notes section,
+.slides,
+.expose .slides,
+.presenter_notes {
     top: 0;
     left: 0;
     right: 0;
@@ -14,35 +61,6 @@ div.slides, body.expose div.slides.nocontext, .presenter_notes {
     position: absolute;
     display: block;
     background: inherit;
-}
-div.slides.nocontext .slide {
-    opacity: 0;
-}
-div.slides.nocontext .slide.next {
-}
-body.expose div.slides.nocontext .slide,
-div.slides.nocontext .slide.current {
-    opacity: 1;
-}
-div.slide {
-    display: none;
-    left: 50%;
-    top: 50%;
-    margin-top: -384px;
-    margin-left: -512px;
-    -webkit-transition: margin 0.3s ease-in, opacity 0.3s ease-in;
-    -moz-transition: margin 0.3s ease-in, opacity 0.3s ease-in;
-    -o-transition: margin 0.3s ease-in, opacity 0.3s ease-in;
-}
-.slide.current,
-div.slides.show_next .slide.next {
-    display: block;
-}
-div.slides.show_next .slide.current {
-    margin-left: -1024px;
-}
-.slide.next {
-    margin-left: 10px;
 }
 /* Content */
 
@@ -134,13 +152,10 @@ div.slides.show_next .slide.current {
 }
 
 /* Expose */
-body.expose div.slides {
-    float: left;
-    position: relative;
+.expose .slides {
     overflow: auto;
-    margin-bottom: 10px;
 }
-body.expose div.slide {
+.expose .slide {
     display: block;
     float: left;
     position: relative;
@@ -161,26 +176,24 @@ body.expose div.slide {
     -o-transition: none;
     cursor: pointer;
 }
-body.expose .slide-wrapper {
+.expose .slide-wrapper {
     float: left;
     position: relative;
     margin: 2%;
     width: 300px;
     height: 233px;
 }
-body.expose .slide footer {
+.expose .slide footer {
 }
-body.expose .slide .inner {
+.expose .slide .inner {
 }
-body.expose .slide.far-past,
-body.expose .slide.past,
-body.expose .slide.next,
-body.expose .slide.far-future {
+.expose .slide.next,
+.expose .slide.after_next {
     margin-left: 0;
 }
 /* Presenter Mode */
 
-body.presenter_view div.slide {
+.presenter_view .slide {
     display: inline;
     position: absolute;
     overflow: hidden;
@@ -190,36 +203,31 @@ body.presenter_view div.slide {
     -webkit-transform-origin: 0 0;
     -o-transform: scale(.5, .5);
     -o-transform-origin: 0 0;
-    margin-top: -384px;
+    margin-top: -375px;
 }
-body.presenter_view .slide.far-past {
+.presenter_view .slide.prev {
     display: block;
-    margin-left: -1594px;
+    margin-left: -1015px;
 }
-body.presenter_view .slide.past {
+.presenter_view .slide.current {
     display: block;
-    margin-left: -1049px;
-}
-body.presenter_view .slide.current {
-    display: block;
-    margin-left: -512px;
-    xborder: 8px solid maroon;
-    box-shadow: 0 0 0 15px #dc322f;
+    margin-left: -500px;
+    box-shadow: 0 0 0 15px maroon;
     z-index: 2;
 }
-body.presenter_view .slide.next {
+.presenter_view .slide.next {
     display: block;
-    margin-left: 25px;
+    margin-left: 15px;
     z-index: 1;
 }
-body.presenter_view .slide.far-future {
+.presenter_view .slide.after_next {
     display: block;
-    margin-left: 562px;
+    margin-left: 525px;
 }
-body.presenter_view .slide.none {
+.presenter_view .slide.none {
     display: none;
 }
-body.presenter_view div#current_presenter_notes {
+.presenter_view #current_presenter_notes {
     visibility: visible;
     display: block;
     position: fixed;
@@ -235,23 +243,23 @@ body.presenter_view div#current_presenter_notes {
     border-radius: 10px;
     margin-bottom: 20px;
 }
-body.presenter_view div#current_presenter_notes section {
+.presenter_view #current_presenter_notes section {
     display: block;
     overflow: visible;
     margin: 60px 30px 0 30px;
-    font-size: 24px;
+    font-size: 22px;
 }
-body.presenter_view div#current_presenter_notes section p {
+.presenter_view #current_presenter_notes section p {
     margin: 0;
 }
-body.presenter_view div#current_presenter_notes h1 {
+.presenter_view #current_presenter_notes h1 {
     font-size: 50%;
     display: block;
 }
-div#current_presenter_notes {
+#current_presenter_notes {
     display: none;
 }
-div.slide div.presenter_notes {
+.slide .presenter_notes {
     display: none;
 }
 #blank {
